# Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  test.cpp  test2.cpp  test3.cpp
InteractiveApp/: App  Application.cpp  Application.h  CMakeCache.txt  CMakeLists.txt  Makefile  MyObservable.h  cmake_install.cmake  controller.cpp  controller.h  main.cpp  main2.cpp  model.cpp  model.h  view.cpp  view.h
InteractiveApp/App_autogen/: deps
InteractiveApp/App_autogen/EWIEGA46WW/: moc_view.cpp
Tests/: CMakeLists.txt  test.cpp  test2.cpp  test3.cpp
src/: CMakeLists.txt  Linalg.h  renderer_include.h
src/Image/: BMPWriter.cpp  BMPWriter.h  Color.cpp  Color.h  Image.cpp  Image.h  Pixel.cpp  Pixel.h  PrimitiveColor.cpp  PrimitiveColor.h  Utils.h
src/Object/: ObjReader.cpp  ObjReader.h  Object.cpp  Object.h  Point.cpp  Point.h  Triangle.cpp  Triangle.h
src/Renderer/: Includes.h  Renderer.cpp  Renderer.h
src/Scene/: Camera.cpp  Camera.h  World.cpp  World.h
